<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreateFragment"
    android:background="@drawable/gradient_drawable">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monoton"
        android:gravity="center_horizontal"
        android:text="@string/Text_name"
        android:textColor="#82B1FF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:scrollIndicators="bottom"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="210dp"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/warrantyimage"
                android:cropToPadding="true"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_lmovie_placeholder"
                tools:src="@drawable/ic_lmovie_placeholder"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/NameTechnics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:hint="@string/NameTechnics"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#E8EAF6"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/NameCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:hint="@string/NameCompany"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#E1F5FE"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:hint="@string/DateWarranty"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#FFF3E0"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Description"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:textColorHint="#FFF3E0"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/SelectCategories"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/action_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/TV"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/love_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/MobilePhone"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/animation_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/VideoGraphics"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/horror_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/CPU"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/drama_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Monitor"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/scifi_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Laptop"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/comedy_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Sony"
                    android:textColor="#455A64"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/adventure_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/HP"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/fantasy_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/LG"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/crime_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Samsung"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/edu_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Kitchen"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/student_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/living_room"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tragedy_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/own_room"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/friendship_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Xiaomi"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/suspense_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/Apple"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10sp"
                android:text="@string/Create"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/BtnHome"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:text="@string/Main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnSpisok"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:text="@string/List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnSettings"
        app:layout_constraintStart_toEndOf="@+id/BtnHome" />

    <Button
        android:id="@+id/BtnSettings"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>